@@ -1,3 +1,7 @@
+2000-06-22  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* armemu.c (MultiplyAdd64): Fix computation of flag N.
+
 2000-06-20  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* armemu.h (NEGBRANCH): Do not overwrite the two most significant
